# SPCW-2

./: CMakeLists.txt  Makefile
src/: main.cpp
